# HessianPreaccumulation

./: CMakeLists.txt  README.md
dep/cmake/: FindNAG_GBench.cmake  FindNAG_GTest.cmake  FindNAG_dco_cpp.cmake
src/: ad.hpp  et.hpp  etconcepts.hpp  etcore.hpp  etevaluator.hpp  etheader.hpp  etleaf.hpp  etopstruct.hpp
tests/: CMakeLists.txt  Makefile  benchmark.cpp  interval.hpp  main.cpp  tangent.hpp
